# obexd-map

./: .gitignore  .mailmap  AUTHORS  ChangeLog  Makefile.am  README  TODO  acinclude.m4  bootstrap  bootstrap-configure  configure  configure.ac  configure.in
btio/: Makefile.am  btio.c  btio.h
client/: Makefile.am  manager.c  mns.c  mns.h  obex-client.service.in  org.openobex.client.service.in  session.c  session.h  sync.c  transfer.c
common/: Makefile.am  logging.c  logging.h
daemon/: Makefile.am  bluetooth.c  bluetooth.conf  bluetooth.h  ftp.c  main.c  obex.c  obex.h  opp.c
doc/: Makefile.am  agent-api.txt  client-api.txt  obexd-api.txt
gdbus/: .gdbus.h.swp  gdbus.h  mainloop.c  object.c  watch.c
gwobex/: Makefile.am  gw-obex.h  obex-xfer.c
messages-qt/: messagepusher.cpp  messagepusher.h  messages-manager.cpp  messages-manager.h  messages-qt-log.h  messages-qt.cpp  messages-qt.h  messages-qt.pro  messageupdater.cpp  messageupdater.h
messages-qt/test/: messages-qt-test.pro  test.cpp
plugins/: Makefile.am  bmsg.c  bmsg.h  bmsg_parser.c  bmsg_parser.h  ftp.c  mas.c  messages-dummy.c  messages-tracker.c  messages.h  opp.c  pbap.c  phonebook-tracker.c  vcard.c  vcard.h
src/: Makefile.am  bluetooth.c  bluetooth.conf  bluetooth.h  dbus.h  ftp.c  logging.c  logging.h  main.c  manager.c  obex.c  obex.conf  obex.h  obexd.h  obexd.service.in  opp.c  org.openobex.service.in  server.c  simple-agent
test/: Makefile.am  exchange-business-cards  ftp-client  get-capabilities  list-folders  main.c  mns-client  pbap-client  pull-business-card  send-files  simple-agent
