AC_PREREQ(2.50)
AC_INIT()

AM_INIT_AUTOMAKE(obexd, 0.01)
AM_CONFIG_HEADER(config.h)

AM_MAINTAINER_MODE

AC_LANG_C

AC_PROG_CC
AC_PROG_INSTALL

AC_PROG_LIBTOOL

AC_PATH_GLIB
AC_PATH_DBUS
AC_PATH_BLUEZ
AC_PATH_OPENOBEX

AC_ARG_OBEXD

AC_OUTPUT([
	Makefile
	doc/Makefile
	gdbus/Makefile
	src/Makefile
	test/Makefile
])
